chore: refactor invoice crupdate processing PDF